variables en los templates

--- a/seccion_templates/templates/basic.html
+++ b/seccion_templates/templates/basic.html
@@ -5,8 +5,10 @@
 	<title></title>
 </head>
 <body>
-	<h1>Welcome to the site!</h1>
+	<h1>Welcome to the site {{ name }}!</h1>
+	<p>{{ letters }}</p>
+	<p>{{ pup_dictionary['pup_name'] }}</p>
 	<h2>Here is a pic of a puppy!</h2>
-	<<img src="../static/puppy_pic.jpg" alt="puppy pic">
+	<img src="../static/puppy_pic.jpg" alt="puppy pic">
 </body>
 </html>
