--- a/seccion_templates/template_inheritance/templates/home.html
+++ b/seccion_templates/template_inheritance/templates/home.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 <h1> This is the home page! </h1>
-<h2> Go to /pappy/name </h2>
+<h2> Go to /puppy/name </h2>
 {% endblock %}
