--- a/seccion_templates/template_inheritance/templates/puppy.html
+++ b/seccion_templates/template_inheritance/templates/puppy.html
@@ -3,5 +3,5 @@
 {% block content %}
 
 <h1> This is the puppy page for: {{ name }} </h1>
-
+<a href="{{ url_for('static', filename='puppy_pic.jpg') }}"> Here </a> 
 {% endblock %}
