--- a/seccion_forms/forms_fields/templates/index.html
+++ b/seccion_forms/forms_fields/templates/index.html
@@ -1,17 +1,27 @@
-<h1>Welcome to the Puppy Survey</h1>
-<form method="POST">
-	{{ form.hidden_tag() }}
-	{{ form.breed.label }} {{ form.breed }}
-	<br>
-	{{ form.neutered.label }} {{ form.neutered }}
-	<br>
-	{{ form.food_choice.label }} {{ form.food_choice }}
-	<br>
-	{{ form.mood.label }} {{ form.mood}}
-	<br>
-	Any other feedback?
-	<br>
-	{{ form.feedback.label }} {{ form.feedback }}
-	<br>
-	{{ form.submit() }}
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+
+<body>
+	<h1>Welcome to the Puppy Survey</h1>
+	<form method="POST">
+		{{ form.hidden_tag() }}
+		{{ form.breed.label }} {{ form.breed }}
+		<br>
+		{{ form.neutered.label }} {{ form.neutered }}
+		<br>
+		{{ form.food_choice.label }} {{ form.food_choice }}
+		<br>
+		{{ form.mood.label }} {{ form.mood}}
+		<br>
+		Any other feedback?
+		<br>
+		{{ form.feedback.label }} {{ form.feedback }}
+		<br>
+		{{ form.submit() }}
+	</form>
+
+</body>
+</html>
