--- a/large_project/puppycompanyblog/templates/base.html
+++ b/large_project/puppycompanyblog/templates/base.html
@@ -18,21 +18,25 @@
 			<li class="nav-link">
 				<a href="{{url_for('core.info')}}">Info</a>
 			</li>
-			<li class="nav-link">
-				<a href="#">Log Out</a>
-			</li>
-			<li class="nav-link">
-				<a href="#">Account</a>
-			</li>
-			<li class="nav-link">
-				<a href="#">Create Post</a>
-			</li>
-			<li class="nav-link">
-				<a href="#">Log In</a>
-			</li>
-			<li class="nav-link">
-				<a href="#">Register</a>
-			</li>
+			<!-- solamente los usuarios logueados veran estas secciones -->
+			{% if current_user.is_authenticated %}
+				<li class="nav-link">
+					<a href="{{url_for('users.logout')}}">Log Out</a>
+				</li>
+				<li class="nav-link">
+					<a href="{{url_for('users.account')}}">Account</a>
+				</li>
+				<li class="nav-link">
+					<a href="#">Create Post</a>
+				</li>
+			{% else %}
+				<li class="nav-link">
+					<a href="{{url_for('users.login')}}">Log In</a>
+				</li>
+				<li class="nav-link">
+					<a href="{{url_for('users.register')}}">Register</a>
+				</li>
+			{% endif %}
 		</ul>
 		<div class="container">
 			{% block content %}
