--- a/large_project/puppycompanyblog/templates/account.html
+++ b/large_project/puppycompanyblog/templates/account.html
@@ -1,31 +1,33 @@
 {% extends "base.html" %}
 
-{%block content %}
+{% block content %}
 <div class="jumbotron">
 	<div class=center>
 		<h1>Welcome to the page for {{current_user.username}}</h1>
-		<img align='center' src="{{url_for('static', filename='profile_pics/' + current_user.profile_image)}}"
-	alt="profile image">	
+		<img align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.profile_image) }}"
+	alt="profile image">
+	{{ current_user.profile_image }}
+	<p>{{ current_user.email }}</p>
 	</div>	
 </div>
 
 <div class="continer">
-	<form method="POST">
-		{{form.hidden_tag()}}
+	<form  method="POST" action = "" enctype="multipart/form-data">
+		{{ form.hidden_tag() }}
 		<div class="form-group">
-			{{form.username.label(class="form-group")}} 
-			{{form.username(class="form-control")}}
+			{{ form.username.label(class="form-group") }} 
+			{{ form.username(class="form-control") }}
 		</div>
 		<div class="form-group">
-			{{form.email.label(class="form-group")}} 
-			{{form.emal(class="form-control")}}
+			{{ form.email.label(class="form-group") }} 
+			{{ form.email(class="form-control") }}
 		</div>
 		<div class="form-group">
-			{{form.picture.label(class="form-group")}} 
-			{{form.picture(class="form-control")}}
+			{{ form.picture.label(class="form-group") }} 
+			{{ form.picture(class="form-control") }}
 		</div>
 		<div class="form-group">
-			{{form.submit(class="btn btn-primary")}} 	
+			{{ form.submit(class="btn btn-primary") }} 	
 		</div>
 		
 	</form>
