--- a/large_project/puppycompanyblog/templates/login.html
+++ b/large_project/puppycompanyblog/templates/login.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block content %%}
+{% block content %}
 
-<form method="POST">
-	{{from.hidden_tag()}}
-	{form.email.label} {{form.email}}
-	{form.password.label} {{form.password}}
-	{{form.submit()}}
-</form>
+	<form method="POST">
+		{{ form.hidden_tag() }}
+		{{ form.email.label }} {{ form.email() }}
+		{{ form.password.label }} {{ form.password() }}
+		{{ form.submit() }}
+	</form>
 
 {% endblock %}
