--- a/large_project/puppycompanyblog/templates/user_blog_posts.html
+++ b/large_project/puppycompanyblog/templates/user_blog_posts.html
@@ -6,35 +6,36 @@
 		<div class="jumbotron">
 			<div align="center">
 				<h1>Welcome to the page for {{user.username}}</h1>			
-				<<img src="{{url_for('static', filename='profile_pics/' + user.profile_image)}}">
+				<img src="{{url_for('static', filename='profile_pics/' + user.profile_image)}}">
 			</div>
 		</div>
 
-		{% for post in blog_post.item %}
-			<h2><a href="{{url_for('blog_post', blog_post_id=post.id)}}">{{post.title}}</a></h2>
-			Written by: <a href="{{url_for('users.user_post', username=post.author.username)}}">{{post.author.username}}</a>
-			<p class="text-muted">Published on: {{post.date.strftime('%Y-%m-%d')}}</p>
-			<br>
-			<p>{{post.text}}</p>
-			<br>
-		{% endfor %}
-	</div>
+{% for post in blog_posts.items %}
 
-	<<nav aria-label="page Navigation example">
-		<ul class="pagination justify-content-center">
-			{% for page_num in blog_posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_currunt=1) %}
-				{% if blog_posts.page == page_num %}
-					<li class="page-item disabled">
-						<a href="{{url_for('users.user_posts', username=user.username, page=page_num)}}" title=""></a>
-					</li>
-				{% else %}
-					<li class="page-item">
-						<a href="{{url_for('users.user_posts', username=user.username, page=page_num)}}" title=""></a>
-					</li>
-				{% endif %}
-				
-			{% endfor %}
-		</ul>
-	</nav>
+          <h2><a href="{{ url_for('blog_posts.blog_post', blog_post_id=post.id) }}">{{ post.title }}</a></h2>
+          Written by: <a href="{{ url_for('users.user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
+          <p class="text-muted">Published on: {{ post.date.strftime('%Y-%m-%d') }}</p>
+          <br>
+            <p>{{post.text}}</p>
+          <br>
 
-{% endblock %}
+{% endfor %}
+
+
+</div>
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    {# http://flask.pocoo.org/snippets/44/ #}
+
+    {% for page_num in blog_posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+            {% if blog_posts.page == page_num %}
+              <li class="page-item disabled">
+                <a class="page-link" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a></li>
+              </li>
+            {% else %}
+              <li class="page-item"><a class="page-link" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a></li>
+            {% endif %}
+    {% endfor %}
+</nav>
+{% endblock content %}
